# scsc-cpp-sig

./: .gitignore  ;  intro.md  lec2.md  lec3.md  link.md  setup.md
exercises/: wordfreq  wordfreq.cpp  wordfreq_fn.cpp
hw-answers/linked-list/: main  main.cpp
hw-answers/tree/: main.cpp
hw/linked-list/: main.cpp
hw/markov/: README.md  alice.txt  hw1.md
hw/mem-alloc/: BetterParticleManager.h  CMakeLists.txt  ClockHUD.h  Constants.h  FrameClock.h  Game.h  JetBrains.gitignore  Particle.h  ParticleManager.h  README.md  VectorParticleManager.h  main.cpp
lectures/: lec3.md  lec4.md  lec5.md  lec5_2.md  lec6.md  lec7.md  lec8.md  lec9.md  memory.md  project.md  xc
